pamc/src/tests/sample_code/should_fail/positivity/bad_match_case_output.ph
type Empty {}

type Unit {
    .C: Unit,
}

type Bad {
    .C(f: match Unit.C { .C => forall(b: Bad) { Empty } }): Bad,
}

let not_bad = fun _(b: Bad): Empty {
    match b {
        .C(f) => f(b),
    }
};

let bad = Bad.C(not_bad);

let empty = not_bad(Bad);
